Slightly changed text size in dpm cards to fix clipping issues

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -8,7 +8,7 @@ body {
 
 .dpm-content {
     color: #002171;
-    font-size: 1.8rem;
+    font-size: 1.6rem;
 }
 
 .sidenav {
